reflection method changed